Current Username in nav Added

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -254,7 +254,7 @@
                                 alt
                                 style="width: 40px; height: 40px"
                             />
-                            <span class="d-none d-lg-inline-flex" id="username" sec:authentication="principal."></span
+                            <span class="d-none d-lg-inline-flex" id="navbar-username" ></span
                             >
                         </a>
                         <div
@@ -277,18 +277,5 @@
                 </div>
             </nav>
             <!-- Navbar No Search End -->
-    <script>
-        $(document).ready(function () {
-            console.log("navigation");
-            //ajax call api/user/profile to get current user name to set #username
-            $.ajax({
-                url: "/api/user/profile",
-                type: "GET",
-                success: function (data) {
-                    $("#username").text(data.username);
-                },
-            });
-        });
-    </script>
     </body>
 </html>
